test: DailyCheckService tdd green 작성